# Agri-Logic

./: .gitignore  .python-version  README.md  main.py  params.yaml  pyproject.toml  requirements.txt
data/: punjab_soil_samples_enhanced_v2.csv
models/: egms_xgb.pkl
src/: exception.py
src/01_chemical/component/: 01_data_ingestion.py  02_data_preprocessing.py  03_feature_engineering.py  04_pre_training.py
src/DisplacementDetector/: api.py  config.py  data_processor.py  ml_predictor.py  velocityCalculator.py
src/chemical_analysis/api/: functions.py  routes.py  schemas.py
src/chemical_analysis/component/: data_ingestion01.py  fine_tuning05.py  training06.py
src/chemical_analysis/inference/: earth_engine_feature.py  pipeline.py
src/predict_toxicity/api/routes/: facilities.py  meteorological.py  simulation.py  terrain.py
src/predict_toxicity/config/: settings.py
src/predict_toxicity/scripts/: compute_terrain_features.py  process_industrial_data.py  process_meteorological_data.py
src/predict_toxicity/services/: dispersion_service.py  facilities_service.py  hydrological_service.py  meteorological_service.py  simulation_service.py  terrain_service.py
web/: index.html
web/static/: app.js  styles.css
