[project]
name = "agri-logic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=25.1.0",
    "dagshub>=0.6.5",
    "earthengine-api>=1.7.10",
    "fastapi>=0.128.0",
    "gdown>=5.2.1",
    "geemap>=0.37.1",
    "joblib>=1.5.3",
    "matplotlib>=3.8.4",
    "mlflow>=2.22.4",
    "numpy>=1.26.4",
    "pandas>=2.1.4",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "uvicorn[standard]>=0.40.0",
    "xgboost>=2.0.3",
]
