[project]
name = "agri-logic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.3",
    "cdsapi>=0.7.7",
    "cfgrib>=0.9.15.1",
    "dagshub>=0.6.5",
    "dask[array]>=2026.1.2",
    "earthengine-api>=1.7.10",
    "fastapi>=0.128.0",
    "fiona>=1.10.1",
    "gdown>=5.2.1",
    "geemap>=0.37.1",
    "geoalchemy2>=0.18.1",
    "geopandas>=1.1.2",
    "joblib>=1.5.3",
    "matplotlib>=3.8.4",
    "mlflow>=2.22.4",
    "netcdf4>=1.7.3",
    "numpy>=1.26.4",
    "pandas>=2.1.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyproj>=3.7.1",
    "pysheds>=0.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "rasterio>=1.4.4",
    "rtree>=1.4.1",
    "scikit-learn>=1.5.2",
    "scipy>=1.11.4",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.40.0",
    "xarray>=2025.6.1",
    "xgboost>=2.0.3",
]
